--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
+    "node-forge": "^1.3.3",
     "pdfkit": "^0.14.0",
     "pg": "^8.16.3",
     "uuid": "^9.0.1"
