--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@btielen/pdf-lib-fontkit": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "googleapis": "^167.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-forge": "^1.3.3",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.14.0",
     "pg": "^8.16.3",
     "uuid": "^9.0.1"
