--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "movilis-backend",
   "version": "1.0.0",
   "description": "Backend modular para emisión de certificados",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev:watch": "nodemon --watch src --exec ts-node src/index.ts",
     "test": "jest"
   },
   "keywords": [
@@ -35,7 +37,20 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.10.1",
+    "@types/node-forge": "^1.3.14",
+    "@types/pdfkit": "^0.17.4",
+    "@types/pg": "^8.15.6",
+    "@types/uuid": "^11.0.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
