--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "dev:watch": "nodemon --watch src --exec ts-node src/index.ts",
+    "init:firmas": "ts-node src/scripts/initFirmasTable.ts",
     "test": "jest"
   },
   "keywords": [
@@ -19,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@btielen/pdf-lib-fontkit": "^1.0.0",
+    "@prisma/client": "^7.1.0",
     "@signpdf/placeholder-pdf-lib": "^3.2.6",
     "@signpdf/placeholder-plain": "^3.2.5",
     "@signpdf/signer-p12": "^3.2.4",
@@ -55,6 +57,7 @@
     "@types/uuid": "^11.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.11",
+    "prisma": "^7.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
