--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Backend modular para emisión de certificados",
   "main": "dist/",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npx prisma generate",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "cross-env PRISMA_CLIENT_ENGINE_TYPE=binary nodemon --exec ts-node src/index.ts",
     "dev:watch": "nodemon --watch src --exec ts-node src/index.ts",
     "init:firmas": "ts-node src/scripts/initFirmasTable.ts",
-    "test": "jest"
+    "test": "jest",
+    "vercel-build": "npm run build",
+    "convert-p12": "node scripts/convert-p12-to-base64.js"
   },
   "keywords": [
     "certificates",
@@ -20,7 +22,8 @@
   "license": "ISC",
   "dependencies": {
     "@btielen/pdf-lib-fontkit": "^1.0.0",
-    "@prisma/client": "^7.1.0",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@signpdf/placeholder-pdf-lib": "^3.2.6",
     "@signpdf/placeholder-plain": "^3.2.5",
     "@signpdf/signer-p12": "^3.2.4",
@@ -55,9 +58,11 @@
     "@types/pdfkit": "^0.17.4",
     "@types/pg": "^8.15.6",
     "@types/uuid": "^11.0.0",
+    "@vercel/node": "^5.5.16",
+    "cross-env": "^10.1.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.11",
-    "prisma": "^7.1.0",
+    "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
