--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend modular para emisión de certificados",
   "main": "dist/",
   "scripts": {
-    "build": "tsc && npx prisma generate",
+    "build": "npx prisma generate && tsc",
     "start": "node dist/index.js",
     "dev": "cross-env PRISMA_CLIENT_ENGINE_TYPE=binary nodemon --exec ts-node src/index.ts",
     "dev:watch": "nodemon --watch src --exec ts-node src/index.ts",
